--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
      web page is a demonstration of
      HTML.
    </p>
-  <img src="\penda.jpg" alt"penguin" </img>
+  <img src="\penda.jpg" alt="penguin" </img>
  </body>
 </html>
