--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
    <p>
      Welcome to my web page, it's a demonstration of HTML.
    </p>
-   <img src="\penda.jpg" alt="penguin">
+   <img src="https://aaronpeyton.github.io/webDev0/penda.jpg" alt="penguin">
  </body>
 </html>
