--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <body>
    <h1>Hello, World</h1>
    <p>
-     Welcome to my web page, it's a demonstration of HTML.
+     Welcome to my web page, it's a demonstration of HTML
    </p>
    <img src="https://aaronpeyton.github.io/webDev0/penda.jpg" alt="penguin">
  </body>
