--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
  <head><title>Example web page</title></head>
  <body>
-   <h1>Hello, World</h1>
+   <h1>Coffee</h1>
    <p>
-     Welcome to my web page, it's a demonstration of HTML
+     Coffee is really great you know. 
    </p>
     <img src="https://aaronpeyton.github.io/webDev0/penda.jpg" alt="penguin">
  </body>
