--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
- <head><title>Example web page</title></head>
- <body>
-  <h1>Coffee</h1>
-  <p>
+ <head><title>Coffee</title></head>
+ <center>
+  <body>
+   <h1>Coffee</h1>
+   <p>
     Coffee is really great you know. 
-  </p>
-  <img src="https://aaronpeyton.github.io/webDev0/penda.jpg" alt="penguin">
- </body>
+   </p>
+   <img src="http://www.stylist.co.uk/resource/binary/8b42250a7b5a61ff8ef7f8230ea96f94/1-small.jpg" alt="coffe infographic">
+   <p> more random facts about coffee </p>
+   <img src="https://aaronpeyton.github.io/webDev0/penda.jpg" alt="penguin">
+  </body>
+ <\center> 
 </html>
