--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
    <p> more random facts about coffee </p>
    <img src="https://aaronpeyton.github.io/webDev0/penda.jpg" alt="penguin">
   </body>
- <\center> 
+ </center> 
 </html>
