added more random content
in effort to force gh-pages to update

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
- <head><title>Coffee</title></head>
+ <head><title>Aaron Peyton</title></head>
  <center>
   <body>
-   <h1>Coffee</h1>
-   <p>
-    Coffee is really great you know. 
-   </p>
+   <h1>Aaron Peyton's personal website</h1>
+   <br>
+   <h3>Random facts about me:</h3>
+   <ul>
+    <li>I really like coffe</li>
+    <li>This is really just not working and i am getting extremely pissed off!</li>
+   </ul>
    <img src="http://www.stylist.co.uk/resource/binary/8b42250a7b5a61ff8ef7f8230ea96f94/1-small.jpg" alt="coffe infographic">
    <p> more random facts about coffee </p>
    <br>
