--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
    <img src="http://www.stylist.co.uk/resource/binary/8b42250a7b5a61ff8ef7f8230ea96f94/1-small.jpg" alt="coffe infographic">
    <p> more random facts about coffee </p>
    <br>
+   <p> 
+    this is just a random test image we were told to add... 
+    <br>
+    but i tried it and my gh-pages thing just kinda completely stopped working
+   </p>
    <img src="https://aaronpeyton.github.io/webDev0/penda.jpg" alt="penguin">
   </body>
  </center> 
