--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
    <h1>Aaron Peyton's personal website</h1>
    <br>
    <h3>Random facts about me:</h3>
-   <ul>
+   <ul style="list-style-type:circle">
     <li>I really like coffe</li>
     <li>This is really just not working and i am getting extremely pissed off!</li>
     <li>I like computer science and have taken or am currently taking, all of the 5 courses offered by my school (curently taking web development, a new class this year)</li>
-    
    </ul>
    <img src="http://www.stylist.co.uk/resource/binary/8b42250a7b5a61ff8ef7f8230ea96f94/1-small.jpg" alt="coffe infographic">
    <p> more random facts about coffee </p>
