--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
- <head><title>Aaron Peyton</title></head>
+	<head><title>Aaron Peyton</title></head>
  <center>
   <body>
    <h1>Aaron Peyton's personal website</h1>
    <br>
+  </center>
    <h3>Random facts about me:</h3>
    <ul style="list-style-type:circle">
-    <li>I really like coffe</li>
+    <li>I really like coffee</li>
     <li>This is really just not working and i am getting extremely pissed off!</li>
     <li>I like computer science and have taken or am currently taking, all of the 5 courses offered by my school (curently taking web development, a new class this year)</li>
    </ul>
-   <img src="http://www.stylist.co.uk/resource/binary/8b42250a7b5a61ff8ef7f8230ea96f94/1-small.jpg" alt="coffe infographic">
-   <p> more random facts about coffee </p>
+   <img src="http://www.stylist.co.uk/resource/binary/8b42250a7b5a61ff8ef7f8230ea96f94/1-small.jpg" alt="coffe infographic" width="200" >
+   <img src="penda.jpg" alt="penguin" width="200" >
+   <p> more random facts about me </p>
    <br>
    <p> 
     this is just a random test image we were told to add... 
-    <br>
     but i tried it and my gh-pages thing just kinda completely stopped working
    </p>
-   <img src="https://aaronpeyton.github.io/webDev0/penda.jpg" alt="penguin">
+
   </body>
- </center> 
+
 </html>
