added more images and content. reorganized images

--- a/index.html
+++ b/index.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html>
-	<head><title>Aaron Peyton</title></head>
- <center>
-  <body>
-   <h1>Aaron Peyton's personal website</h1>
-   <br>
-  </center>
-   <h3>Random facts about me:</h3>
-   <ul style="list-style-type:circle">
-    <li>I really like coffee</li>
-    <li>This is really just not working and i am getting extremely pissed off! ... not anymore, it just has a bunch of lag time</li>
-    <li>I like computer science and have taken or am currently taking, all of the 5 courses offered by my school (curently taking web development, a new class this year)</li>
-   </ul>
-   <img src="http://www.stylist.co.uk/resource/binary/8b42250a7b5a61ff8ef7f8230ea96f94/1-small.jpg" alt="coffe infographic" width="200" >
-   <img src="penda.jpg" alt="penguin" width="200" >
-   <p> more random facts about me </p>
-   <br>
-   <p> 
-    this is just a random test image we were told to add... 
-    but i tried it and my gh-pages thing just kinda completely stopped working
-   </p>
-
-  </body>
-
+	<head><title>Aaron Peyton is AWESOME</title></head>
+  	<body>
+   		<center><h1>Aaron Peyton's personal website</h1></center>
+   		<br>
+   		<h2>Random facts about me:</h2>
+   		<ul style="list-style-type:disc">
+    		<li>I really like coffee</li>
+   		 	<li>
+   		 		So apparently git hub pages takes a while to update (not actually terrible just annoying)... 
+			</li>
+    		<li>
+    			I like computer science and have taken or am currently taking all of the 5 courses offered by my school
+    		</li>
+    		<ul style="list-style-type:circle">
+    			<li>Exploring Computer Science</li>
+    			<li>AP Computer Science</li>
+    			<li>Computational art</li>
+    			<li>Mobile Programming</li>
+    			<li>Web Development (currently enrolled)</li>
+    		</ul>
+    		<li>My favorite animals:</li>
+    		<ul style="list-style-type:circle">
+    			<li>Pandas, by far my favorite</li>
+    			<li>I really like red pandas as well</li>
+    			<li>Penguins are pretty neat too</li>
+    		</ul>
+   		</ul>
+   		<img src="images/panda.jpg" alt="panda" height="300" >
+   		<img src="images/penda.jpg" alt="penda" height="300">
+   		<br>
+   		<img src="images/penguin.jpg" alt="penguin" height="300">
+   		<img src="images/rPanda.jpg" alt="penguin" height="300">
+   		<p> uhhhhh...<br>&nbsp&nbsp&nbsp&nbsp&nbsp I'm really not a big fan of html, especially without using css </p>
+	</body>
 </html>
