added donation(fake) button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    		<br>
    		<h2>Random facts about me:</h2>
    		<ul style="list-style-type:disc">
-    		<li>I really like coffee</li>
+    		<li>I really like coffee and tea; I'm rather dependent on it given my 0 period that starts at 7</li>
    		 	<li>
    		 		So apparently git hub pages takes a while to update (not actually terrible just annoying)... 
 			</li>
@@ -32,6 +32,40 @@
    		<br>
    		<img src="images/penguin.jpg" alt="penguin" height="300">
    		<img src="images/rPanda.jpg" alt="penguin" height="300">
-   		<p> uhhhhh...<br>&nbsp&nbsp&nbsp&nbsp&nbsp I'm really not a big fan of html, especially without using css </p>
+   		<br>
+   		<h3>Coding proficiency</h3>
+   		<ul style="list-style-type:disc">
+    		<li>swift</li>
+    		<ul style="list-style-type:circle">
+    			<li>I have spent a lot of time in swift and have  used it the most recently</li>
+    			<li>I have made many apps and have been working on a directory app at the Santa Barbara County Education Office</li>
+    		</ul>
+    		<li>I also know a bit of java, especially in processing but I can work with straight java as well</li>
+    		<li>I may not be super proficient in Python, but i really love working in it. I'll use it as much as I can for side projects and what not</li>
+   		</ul>
+   		<center>
+   			<p> uhhhhh...<br>&nbsp&nbsp&nbsp&nbsp&nbsp I'm really not a big fan of html, especially without using css</p>
+   			<br>
+   			<p>feel free to donate</p>
+   			
+   			<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+		    <!-- Identify your business so that you can collect the payments. -->
+		    	<input type="hidden" name="business" value="donations@kcparkfriends.org">
+				<!-- Specify a Donate button. -->
+   				<input type="hidden" name="cmd" value="_donations">
+   			
+				<!-- Specify details about the contribution -->
+	    		<input type="hidden" name="item_name" value="for a good cause">
+   				<input type="hidden" name="item_number" value="Please no">
+   				<input type="hidden" name="currency_code" value="USD">
+	
+    			<!-- Display the payment button. -->
+ 	  			<input type="image" name="submit"
+    			src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_92x26.png" alt="Donate">
+				<img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
+			</form>
+		</center>
+		<br><br>
 	</body>
+	<h6>don't actually donate cause i didn't fill out where where the money goes</h6>
 </html>
