--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
    	<center><h1>Aaron Peyton's personal website</h1></center>
    	<br>
    		<h2>Random facts about me:</h2>
-   		<ul style="list-style-type:disc">
+   		<ul>
     		<li>I really like coffee and tea; I'm rather dependent on it given my 0 period that starts at 7</li>
    		 	<li>So apparently git hub pages takes a while to update (not actually terrible just annoying)...</li>
     		<li>I like computer science and have taken or am currently taking all of the 5 courses offered by my school</li>
 				<li>
-    			<ul style="list-style-type:circle">
+    			<ul>
     				<li>Exploring Computer Science</li>
     				<li>AP Computer Science</li>
-    				<li>Computational art</li>
+						<li>Computational art</li>
     				<li>Mobile Programming</li>
     				<li>Web Development (currently enrolled)</li>
     			</ul>
 				</li>
     		<li>My favorite animals:</li>
 				<li>
-    			<ul style="list-style-type:circle">
+    			<ul>
     				<li>Pandas, by far my favorite</li>
     				<li>I really like red pandas as well</li>
     				<li>Penguins are pretty neat too</li>
@@ -35,14 +35,14 @@
    			<img src="images/penda.jpg" alt="penda">
    			<br>
    			<img src="images/penguin.jpg" alt="penguin">
-   			<img src="images/rPanda.jpg" alt="penguin">
+   			<img src="images/rPanda.jpg" alt="redPanda">
 			</center>
    		<br>
    		<h3>Coding proficiency</h3>
-   		<ul style="list-style-type:disc">
+   		<ul>
     		<li>swift</li>
 				<li>
-    			<ul style="list-style-type:circle">
+    			<ul>
     				<li>I have spent a lot of time in swift and have  used it the most recently</li>
     				<li>I have made many apps and have been working on a directory app at the Santa Barbara County Education Office</li>
     			</ul>
