--- a/index.html
+++ b/index.html
@@ -1,79 +1,81 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Aaron Peyton is AWESOME</title>
-		<link rel ="stylesheet" type="text/css" href="this.css">
-	</head>
-  <body>
-   	<center><h1>Aaron Peyton's personal website</h1></center>
-   	<br>
-   		<h2>Random facts about me:</h2>
-   		<ul>
-    		<li>I really like coffee and tea; I'm rather dependent on it given my 0 period that starts at 7</li>
-   		 	<li>So apparently git hub pages takes a while to update (not actually terrible just annoying)...</li>
-    		<li>I like computer science and have taken or am currently taking all of the 5 courses offered by my school</li>
-				<li>
-    			<ul>
-    				<li>Exploring Computer Science</li>
-    				<li>AP Computer Science</li>
-						<li>Computational art</li>
-    				<li>Mobile Programming</li>
-    				<li>Web Development (currently enrolled)</li>
-    			</ul>
-				</li>
-    		<li>My favorite animals:</li>
-				<li>
-    			<ul>
-    				<li>Pandas, by far my favorite</li>
-    				<li>I really like red pandas as well</li>
-    				<li>Penguins are pretty neat too</li>
-    			</ul>
-				</li>
-   		</ul>
-			<center>
-   			<img src="images/panda.jpg" alt="panda">
-   			<img src="images/penda.jpg" alt="penda">
-   			<br>
-   			<img src="images/penguin.jpg" alt="penguin">
-   			<img src="images/rPanda.jpg" alt="redPanda">
-			</center>
-   		<br>
-   		<h3>Coding proficiency</h3>
-   		<ul>
-    		<li>swift</li>
-				<li>
-    			<ul>
-    				<li>I have spent a lot of time in swift and have  used it the most recently</li>
-    				<li>I have made many apps and have been working on a directory app at the Santa Barbara County Education Office</li>
-    			</ul>
-				</li>
-    		<li>I also know a bit of java, especially in processing but I can work with straight java as well</li>
-    		<li>I may not be super proficient in Python, but i really love working in it. I'll use it as much as I can for side projects and what not</li>
-   		</ul>
-			<br>
-   		<p> uhhhhh...<br> I'm really not a big fan of html, especially without using css</p>
-			<ul style="list-style-type:none"><p>now with css, so much better</p></ul>
-   		<br>
-			<center>
-   			<p>feel free to donate</p>
-   			<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-		    <!-- Identify your business so that you can collect the payments. -->
-		    	<input type="hidden" name="business" value="donations@kcparkfriends.org">
-				<!-- Specify a Donate button. -->
-   				<input type="hidden" name="cmd" value="_donations">
 
-				<!-- Specify details about the contribution -->
-	    		<input type="hidden" name="item_name" value="for a good cause">
-   				<input type="hidden" name="item_number" value="Please no">
-   				<input type="hidden" name="currency_code" value="USD">
+<head>
+	<title>Aaron Peyton is AWESOME</title>
+	<link rel="stylesheet" type="text/css" href="this.css">
+</head>
 
-    			<!-- Display the payment button. -->
- 	  			<input type="image" name="submit"
-    			src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_92x26.png" alt="Donate">
-					<img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" >
-				</form>
-			</center>
-		<br><br>
-		<h6>don't actually donate cause i didn't fill out where where the money goes</h6>
-	</body>
+<body>
+	<center>
+		<h1>Aaron Peyton's personal website</h1></center>
+	<br>
+	<h2>Random facts about me:</h2>
+	<ul>
+		<li>I really like coffee and tea; I'm rather dependent on it given my 0 period that starts at 7</li>
+		<li>So apparently git hub pages takes a while to update (not actually terrible just annoying)...</li>
+		<li>I like computer science and have taken or am currently taking all of the 5 courses offered by my school</li>
+		<li>
+			<ul>
+				<li>Exploring Computer Science</li>
+				<li>AP Computer Science</li>
+				<li>Computational art</li>
+				<li>Mobile Programming</li>
+				<li>Web Development (currently enrolled)</li>
+			</ul>
+		</li>
+		<li>My favorite animals:</li>
+		<li>
+			<ul>
+				<li>Pandas, by far my favorite</li>
+				<li>I really like red pandas as well</li>
+				<li>Penguins are pretty neat too</li>
+			</ul>
+		</li>
+	</ul>
+	<center>
+		<img src="images/panda.jpg" alt="panda">
+		<img src="images/penda.jpg" alt="penda">
+		<br>
+		<img src="images/penguin.jpg" alt="penguin">
+		<img src="images/rPanda.jpg" alt="redPanda">
+	</center>
+	<br>
+	<h3>Coding proficiency</h3>
+	<ul>
+		<li>swift</li>
+		<li>
+			<ul>
+				<li>I have spent a lot of time in swift and have used it the most recently</li>
+				<li>I have made many apps and have been working on a directory app at the Santa Barbara County Education Office</li>
+			</ul>
+		</li>
+		<li>I also know a bit of java, especially in processing but I can work with straight java as well</li>
+		<li>I may not be super proficient in Python, but i really love working in it. I'll use it as much as I can for side projects and what not</li>
+	</ul>
+	<br>
+	<p> uhhhhh...I'm really not a big fan of html, especially without using css</p>
+	<p> now with css, everything is so much better</p>
+	<center>
+		<p>feel free to donate</p>
+		<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+			<!-- Identify your business so that you can collect the payments. -->
+			<input type="hidden" name="business" value="donations@kcparkfriends.org">
+			<!-- Specify a Donate button. -->
+			<input type="hidden" name="cmd" value="_donations">
+
+			<!-- Specify details about the contribution -->
+			<input type="hidden" name="item_name" value="for a good cause">
+			<input type="hidden" name="item_number" value="Please no">
+			<input type="hidden" name="currency_code" value="USD">
+
+			<!-- Display the payment button. -->
+			<input type="image" name="submit" src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_92x26.png" alt="Donate">
+			<img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif">
+		</form>
+	</center>
+	<br><br>
+	<h6>don't actually donate cause i didn't fill out where where the money goes</h6>
+</body>
+
 </html>
