css, git ignore

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	<br>
 	<h3>Coding proficiency</h3>
 	<ul>
-		<li>swift</li>
+		<li>swift:</li>
 		<li>
 			<ul>
 				<li>I have spent a lot of time in swift and have used it the most recently</li>
@@ -65,17 +65,17 @@
 			<input type="hidden" name="cmd" value="_donations">
 
 			<!-- Specify details about the contribution -->
-			<input type="hidden" name="item_name" value="for a good cause">
+			<input type="hidden" name="item_name" value="donations to nothing">
 			<input type="hidden" name="item_number" value="Please no">
-			<input type="hidden" name="currency_code" value="USD">
+			<input type="hidden" name="currency_code" value="Flurbos">
 
 			<!-- Display the payment button. -->
 			<input type="image" name="submit" src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_92x26.png" alt="Donate">
-			<img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif">
+			<img alt="" class="donate" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif">
 		</form>
 	</center>
 	<br><br>
-	<h6>don't actually donate cause i didn't fill out where where the money goes</h6>
+	<h6>don't actually donate because I didn't fill out where where the money goes</h6>
 </body>
 
 </html>
