--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
 		<li>I may not be super proficient in Python, but i really love working in it. I'll use it as much as I can for side projects and what not</li>
 	</ul>
 	<br>
-	<p> uhhhhh...I'm really not a big fan of html, especially without using css</p>
-	<p> now with css, everything is so much better</p>
+	<p>
+		uhhhhh...I'm really not a big fan of html, especially without using css
+		<br> now with css, everything is so much better
+	</p>
 	<center>
 		<p>feel free to donate</p>
 		<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
